# birr

./: .gitignore  Makefile  README.md  pyproject.toml  verify.sh
configs/inference/: example.yaml
src/birr/: tokenization.py
src/birr/batch_inference/: Dockerfile  data_models.py  docker.env  entrypoint.sh  generate_io_processor.py  runner.py  serializer.py  settings.py  utils.py  worker.py
src/birr/batch_inference/predictors/: base_predictor.py  predictor.py
src/birr/batch_inference/queue/: base_queue.py  dummy_predictor.py  in_memory_queue.py
src/birr/core/: config.py
tests/birr/: test_tokenization.py
tests/birr/batch_inference/: test__settings.py  test_data_models.py  test_serializer.py  test_tokenizer.py  test_utils.py
tests/birr/batch_inference/fixtures/: instances_file.json  instances_file.json.zstd
tests/birr/batch_inference/queue/: test__in_memory_queue.py
tests/birr/fixtures/dummy_model/: tokenizer.json
